--- a/HW8/main.css
+++ b/HW8/main.css
@@ -7,6 +7,15 @@
     top: 400;
   }
 
+#triangle {
+      width: 100px;
+      height: 100px;
+      background: green;
+      position: absolute;
+      left: 0;
+      top: 400;
+    }
+
   .stuff{
     background: gold;
     color:white;
