--- a/HW8/main.css
+++ b/HW8/main.css
@@ -1,20 +1,11 @@
 #square {
     width: 100px;
     height: 100px;
-    background: green;
+    background: orange;
     position: absolute;
     left: 0;
     top: 400;
   }
-
-#triangle {
-      width: 100px;
-      height: 100px;
-      background: green;
-      position: absolute;
-      left: 0;
-      top: 400;
-    }
 
   .stuff{
     background: gold;
