--- a/HW8/main.css
+++ b/HW8/main.css
@@ -7,6 +7,14 @@
     top: 400;
   }
 
+  #cat {
+      width: 400px;
+      height: 400px;
+      position: absolute;
+      left: 0;
+      top: 500;
+    }
+
   .stuff{
     background: gold;
     color:white;
