--- a/HW16/styles/style.css
+++ b/HW16/styles/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 0;
   margin: 0;
-  background-image: url("images/water3.JPG");
+  background-image: url("HW16/images/water3.JPG");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
@@ -41,7 +41,7 @@ body {
   /* as a percentage of the viewport height (vh) */
   height: 100vh;
   min-height: 740px;
-  background-image: url("images/water3.JPG");
+  background-image: url("HW16/images/water3.JPG");
   background-position: left;
   background-repeat: no-repeat;
   background-size: cover;
