--- a/HW16/main.css
+++ b/HW16/main.css
@@ -4,15 +4,15 @@ cat.jpg{
 }
 
 .stuff{
-  background: gold;
-  color:white;
+  background: beige;
+  color:black;
 }
 
 #third{
-  background: silver;
-  color:white;
+  background: beige;
+  color:black;
 }
 
 body{
-    background-color: maroon;
+    background-color: beige;
 }
